Fix 1.16 compatibility